<resources>
    <string name="app_name">Happy Moments</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="not_found_title">Oops...</string>
    <string name="not_found_body">There were no faces detected in the photos you\'ve chosen . You can choose new photos and try again or take them now!</string>

    <string name="exit_title">Are you sure?</string>
    <string name="exit_body">Any unsaved photos will be deleted</string>
    <string name="negative_button">No, I\'ll stay</string>
    <string name="positive_button">Yes, I\'m sure</string>

    <string name="network_error">No Internet</string>
    <string name="network_error_body">This App requires Internet connection</string>
    <string name="connect_btn">Connect</string>
    <string name="cancel_btn">Cancel</string>


    <string name="refreshInfo">- Clear screen</string>
    <string name="wandInfo">- Start searching for your best photo</string>
    <string name="addInfo">- Add photos from gallery</string>

    <string name="ok_btn">OK, got it!</string>

</resources>
