<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/theme_light_grey"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_face"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/not_found_title"
            android:text="@string/not_found_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/not_found_body"
                android:text="@string/not_found_body"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textSize="15sp" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shadow_white"
                android:text="@string/ok_btn"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>




</RelativeLayout>
