<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layoutDirection="ltr">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/theme_light_grey"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/refreshBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_refresh"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_toEndOf="@+id/refreshBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refreshInfo"
                android:layout_margin="20dp"
                android:textSize="20sp"

                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/wandBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_white_wand"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_toEndOf="@+id/wandBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wandInfo"
                android:layout_margin="20dp"
                android:textSize="20sp"

                />

        </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/addPhotoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_a_photo"
                    android:layout_margin="20dp"/>

                <TextView
                    android:layout_toEndOf="@+id/addPhotoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addInfo"
                    android:layout_margin="20dp"
                    android:textSize="20sp"

                    />

            </RelativeLayout>

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shadow_white"
                android:text="@string/ok_btn"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>
        </LinearLayout>



    </android.support.v7.widget.CardView>




</RelativeLayout>
